--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-paystack": "^2.0.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
