--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
     "bootstrap": "^4.3.1",
+    "mdbreact": "^4.20.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-paypal-express-checkout": "^1.0.5",
