--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "bootstrap": "^4.3.1",
+    "delayed-scroll-restoration-polyfill": "^0.1.1",
     "mdbreact": "^4.20.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
